--- a/Resouces/View/pages/About.html
+++ b/Resouces/View/pages/About.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Sobre</title>
 </head>
 
 <body>
-    <h1>Home {{nome}}</h1>
+    <h1>Sobre {{nome}}</h1>
     <hr>
-
+    <h2>{{descricao}}</h2>
+    <h2>E o Pedro mora na rua {{endereco}} </h2>
 </body>
 
 </html>
