--- a/Resouces/View/pages/header.html
+++ b/Resouces/View/pages/header.html
@@ -2,4 +2,6 @@
     <ul>
         <li><a href="https://www.youtube.com/">Youtube</a></li>
     </ul>
+    <a href="{{URL}}"><button></button>Home</a>
+    <a href="{{URL}}/sobre"><button></button>Sobre</a>
 </div>
